<resources>
	<string name="app_name">Geofence4Fhem</string>
	<string name="title_activity_main">Geofence für FHEM</string>
	<string name="title_activity_maps">Map</string>
	<string name="title_activity_fhem">edit FHEM settings</string>

	<string name="zoneTitle">Anzeigename der Zone</string>
	<string name="zoneName">FHEM Name der Zone</string>
	<string name="radius">Radius</string>

	<string name="fhemUrl">FHEM URL (https://myfhem.de/fhem/geo)</string>
	<string name="fhemUsername">Username (optional)</string>
	<string name="fhemPassword">Password (optional)</string>
	<string name="fhemDeviceID">Geofence device identifier</string>
	<string name="fhemSave">Speichern</string>

	<string name="insufficient_permissions">Insufficient permissions.</string>
	<string name="permission_rationale">Location permission is needed for core functionality</string>
	<string name="permission_denied_explanation">Permission was denied, but is needed for core
		functionality.
	</string>

	<string name="geofence_transition_notification_text">
		Click notification to return to app
	</string>

	<string name="settings">Settings</string>

	<!-- Transition type strings -->
	<string name="geofence_transition_entered">Entered</string>
	<string name="geofence_transition_dwell">Dwell</string>
	<string name="geofence_transition_exited">Exited</string>
	<string name="unknown_geofence_transition">Unknown Transition</string>

	<!-- Error strings -->
	<string name="geofence_not_available">Geofence service is not available now</string>
	<string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
	<string name="geofence_too_many_pending_intents">
		You have provided too many PendingIntents to the addGeofences() call
	</string>
	<string name="unknown_geofence_error">
		Unknown error: the Geofence service is not available now
	</string>
	<string name="geofence_transition_invalid_type">
		Geofence transition error: invalid transition type %1$d
	</string>

	<string name="phone_state_permission_rationale">access to your device uuid needed</string>
	<string name="phone_state_permission_denied_explanation">Access to device-uuid was denied.
		You need to allow the access or manually enter an unique id and use this id in your fhem geofancy/roommate setup (devAlias/rr_geofenceUUIDs)
	</string>

	<string name="geofence_position">Geofence position</string>
	<string name="profileName">profile name</string>

	<string name="ringer_enter_text">Enter Zone</string>
	<string name="ringer_leave_text">Leave Zone</string>
	<string name="ringer_silent">Silent</string>
	<string name="ringer_vibrate">Vibrate</string>
	<string name="ringer_normal">Normal</string>

	<string name="ringer_mode_switch_silent">Ringer silent</string>
	<string name="ringer_mode_switch_vibrate">Ringer vibrate</string>
	<string name="ringer_mode_switch_normal">Ringer normal</string>
	<string name="ringer_mode_switch_unknown">unknown ringer mode</string>
	<string name="ringer_mode_switch_unchanged">Ringer unchanged</string>

	<string name="profile_type_fhem">FHEM-Geofancy Call</string>
	<string name="profile_type_ringer">Ringer settings</string>
	<string name="title_activity_profiles">Profiles</string>
</resources>
