<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				  android:orientation="horizontal"
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:baselineAligned="false">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
					  android:orientation="vertical"
					  android:layout_marginStart="8dp"
					  android:layout_width="match_parent"
					  android:layout_height="match_parent"
					  android:layout_weight="1">
		<TextView android:layout_width="match_parent"
					 android:layout_height="wrap_content"
					 android:text="@string/ringer_enter_text"/>
		<RadioGroup
				android:id="@+id/ringerEnter"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			<RadioButton
					android:id="@+id/ringerEnterSilent"
					android:text="@string/ringer_silent"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"/>
			<RadioButton
					android:id="@+id/ringerEnterVibrate"
					android:text="@string/ringer_vibrate"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"/>
			<RadioButton
					android:id="@+id/ringerEnterNormal"
					android:text="@string/ringer_normal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"/>
			<Button
					android:id="@+id/ringerEnterTest"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="Test"/>
		</RadioGroup>
	</LinearLayout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
					  android:orientation="vertical"
					  android:layout_marginEnd="8dp"
					  android:layout_width="match_parent"
					  android:layout_height="match_parent"
					  android:layout_weight="1">

		<TextView android:layout_width="match_parent"
					 android:layout_height="wrap_content"
					 android:text="@string/ringer_leave_text"/>
		<RadioGroup
				android:id="@+id/ringerLeave"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			<RadioButton
					android:id="@+id/ringerLeaveSilent"
					android:text="@string/ringer_silent"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"/>
			<RadioButton
					android:id="@+id/ringerLeaveVibrate"
					android:text="@string/ringer_vibrate"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"/>
			<RadioButton
					android:id="@+id/ringerLeaveNormal"
					android:text="@string/ringer_normal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"/>
		</RadioGroup>
		<Button
				android:id="@+id/ringerLeaveTest"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="Test"/>
	</LinearLayout>
</LinearLayout>
