<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geofence_position"
        />
    <TextView
        android:id="@+id/zoneKoordinaten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp">
        <EditText
            android:id="@+id/zoneTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zoneTitle"
            android:imeOptions="actionDone"
            android:singleLine="true">
            <requestFocus />
        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp">
        <EditText
            android:id="@+id/zoneName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zoneName"
            android:imeOptions="actionDone"
            android:singleLine="true">
        </EditText>
    </com.google.android.material.textfield.TextInputLayout>


    <EditText
        android:id="@+id/zoneRadiusText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/radius"
        android:imeOptions="actionDone|actionGo|actionNext|actionPrevious"
        android:inputType="numberDecimal" />

    <CheckBox
          android:id="@+id/useDwell"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Use 'dwell' Signal" />

</LinearLayout>