<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp">
        <EditText
            android:id="@+id/fhemUrl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fhemUrl"
            android:imeOptions="actionDone"
            android:singleLine="true">
        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp">
        <EditText
            android:id="@+id/fhemUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fhemUsername"
            android:imeOptions="actionDone"
            android:singleLine="true">
        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp">
        <EditText
            android:id="@+id/fhemPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/fhemPassword"
            android:imeOptions="actionDone"
            android:singleLine="true">
        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/fhemDeviceID"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/fhemDeviceID"
                android:imeOptions="actionDone"
                android:singleLine="true">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="fetch"
            android:onClick="requestDeviceUUID"/>
    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fhemSave"
        android:onClick="save"
        />

    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="Active for geofences"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/geofencesList"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/layout_geofence_item" />


</LinearLayout>